<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/rechercheFragment"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_text_search"/>
        <item
            android:id="@+id/voyageFragment"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/menu_text_add"
            tools:ignore="DuplicateIds" />
        <item
            android:id="@+id/developpementFragment"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/menu_text_self"
            tools:ignore="DuplicateIds" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_text_profile"
            tools:ignore="DuplicateIds" />
    </group>
</menu>