<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.InscriptionFragment">

    <EditText
        android:id="@+id/plainTextCourriel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/plainTextSurname"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/plainTextName"
        app:layout_constraintTop_toBottomOf="@+id/plainTextSurname" />

    <EditText
        android:id="@+id/plainTextPassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|text|textPassword|textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/plainTextPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/plainTextPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/plainTextPhoneNumber" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/plainTextConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/plainTextConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/plainTextConfirmPassword" />

    <EditText
        android:id="@+id/plainTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/nameField"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@+id/plainTextSurname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/plainTextSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/surnameField"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/plainTextName"
        app:layout_constraintTop_toTopOf="@+id/plainTextName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/plainTextConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/confirmPasswordField"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/plainTextPassWord"
        app:layout_constraintStart_toStartOf="@+id/plainTextPassWord"
        app:layout_constraintTop_toBottomOf="@+id/plainTextPassWord"
        android:autofillHints="" />

    <EditText
        android:id="@+id/plainTextPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/phoneNumberField"
        android:digits="0123456789"
        android:inputType="numberSigned|textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/plainTextCourriel"
        app:layout_constraintStart_toStartOf="@+id/plainTextCourriel"
        app:layout_constraintTop_toBottomOf="@+id/plainTextCourriel" />

</androidx.constraintlayout.widget.ConstraintLayout>