<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ListView
        android:id="@+id/listViewPassager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonJoinTravel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/buttonJoinTravel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewPassager" />

    <Button
        android:id="@+id/buttonLeaveTravel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLeaveTravel"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextNote"
        app:layout_constraintTop_toTopOf="@+id/editTextNote"
        app:layout_constraintVertical_bias="0.666" />

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:autofillHints=""
        android:ems="10"
        android:digits="012345689"
        android:hint="@string/fieldNote"
        android:inputType="numberSigned|textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/buttonJoinTravel"
        app:layout_constraintStart_toEndOf="@+id/buttonJoinTravel"
        app:layout_constraintTop_toTopOf="@+id/buttonJoinTravel"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>